--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "pg-promise": "^8.6.5"
   },
   "devDependencies": {
     "cors": "^2.8.5",
